crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__backspace_alias.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..15,
            value: StringLiteral(
                ExprStringLiteral {
                    range: 0..15,
                    value: StringLiteralValue {
                        inner: SinglePart(
                            StringLiteral {
                                range: 0..15,
                                value: "\u{8}",
                                flags: StringLiteralFlags {
                                    quote_style: Double,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
