crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__character_tabulation_with_justification_alias.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..45,
            value: StringLiteral(
                ExprStringLiteral {
                    range: 0..45,
                    value: StringLiteralValue {
                        inner: SinglePart(
                            StringLiteral {
                                range: 0..45,
                                value: "\u{89}",
                                flags: StringLiteralFlags {
                                    quote_style: Double,
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
