crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__escape_octet.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..14,
            value: BytesLiteral(
                ExprBytesLiteral {
                    range: 0..14,
                    value: BytesLiteralValue {
                        inner: SinglePart(
                            BytesLiteral {
                                range: 0..14,
                                value: [
                                    35,
                                    97,
                                    4,
                                    83,
                                    52,
                                ],
                                flags: BytesLiteralFlags {
                                    quote_style: Single,
                                    prefix: Regular,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
